--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<html>
+<head>
 <script src="phonegap.js"></script>
-123
+</head>
+<body style="margin:0;padding:0;">
+<iframe src="http://ergotronica.ru" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+</body>
+</html>
