--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <script src="phonegap.js"></script>
 </head>
 <body style="margin:0;padding:0;">
-<iframe src="http://ergotronica.ru" style="border: 0; width: 100%; height: 100%">Your browser doesn't support iFrames.</iframe>
+This is Ergotronica.ru driver application.
 </body>
 </html>
